--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,5 +1,5 @@
 .chat {
-  flex: 0.65;
+  flex: 0.6;
   display: flex;
   flex-direction: column;
 }
@@ -14,9 +14,10 @@
 
 .chat__header {
   display: flex;
-  padding: 20px;
+  padding: 12px;
   align-items: center;
   border-bottom: 1px solid lightgray;
+  border-right: 1px solid lightgray;
 }
 
 .chat__headerInfo {
@@ -39,12 +40,25 @@
   min-width: 100px;
 }
 
+.chat__headerRight > input {
+  border-radius: 30px;
+  padding: 10px;
+  border: none;
+  margin: 0 10px 0px 10px;
+  width: 200px;
+}
+
 .chat__body {
   flex: 1;
-  background-image: url('https://wallpaperaccess.com/full/1746747.jpg');
+  /* background-image: url('');
   background-repeat: repeat;
-  background-position: center;
+  background-position: center; */
   overflow: auto;
+  background-color: white;
+}
+
+.chat__body > li {
+  list-style-type: none;
 }
 
 .chat__message {
@@ -94,12 +108,16 @@
   background-color: #dcf8c6;
   right: -50px;
 }
+.emoji {
+  position: absolute;
+  bottom: 13%;
+}
 
 .chat__footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 62px;
+  height: 70px;
   border: 1px solid lightgray;
 }
 
