--- a/src/Chat.css
+++ b/src/Chat.css
@@ -66,7 +66,7 @@
   font-size: 15px;
   border-radius: 10px;
   padding: 10px;
-  background-color: white;
+  background-color: rgb(24, 153, 233);
   width: fit-content;
   margin: 70px;
   margin-bottom: -30px;
